exercise-1.7-external-access-with-ingress/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-service
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 80
      targetPort: 3000
