exercise-1.7-external-access-with-ingress/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
spec:
  rules:
    - host: log-output.local
      http:
        paths:
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: log-output-service
                port:
                  number: 80
